--- a/index.html
+++ b/index.html
@@ -78,12 +78,16 @@
         </div>
 
         <a href="#" id="infoLink" class="info-icon" title="Ver manual de usuario">i</a>
+        <!-- <canvas id="multiplexorCanvas" width="400" height="400" style="border: 1px solid #ccc; margin-top: 20px;"></canvas>  -->
+        <canvas id="multiplexorCanvas" width="400" height="400"></canvas> 
+
 
         <footer>
             <p>Rocío Jaluf</p>
             <p>Comunicaciones 2024</p>
         </footer>
-        
+
+
         <script src="script.js"></script>
 </body>
 </html>
