cambios realizados al multiplexor

--- a/index.html
+++ b/index.html
@@ -71,15 +71,18 @@
         <!-- Resultados -->
         <div id="results" class="results">
           <h2>Resultados</h2>
-          <p id="frame-bits">Bits totales de la trama de salida: </p>
-          <p id="transmission-rate-result">Tasa de transmisión del enlace: </p>
-          <p id="frame-duration">Duración de cada trama de entrada: </p>
+          <p id="frame-bits">Tamaño de la trama de salida: </p>
+          <p id="transmission-rate-result">Tasa de bits de salida: </p>
+          <p id="frame-duration">Duración de la trama: </p>
+          <p id="efficiency">Eficiencia del sistema: </p>
+
         </div>
         </div>
 
         <a href="#" id="infoLink" class="info-icon" title="Ver manual de usuario">i</a>
-        <!-- <canvas id="multiplexorCanvas" width="400" height="400" style="border: 1px solid #ccc; margin-top: 20px;"></canvas>  -->
-        <canvas id="multiplexorCanvas" width="400" height="400"></canvas> 
+        
+
+         <canvas id="multiplexorCanvas" width="400" height="600"></canvas>  
 
 
         <footer>
